mobile formatting improvements, there's a bug that the text gets too wide though

--- a/styles.css
+++ b/styles.css
@@ -42,21 +42,6 @@ body {
     height: 100%;
 }
 
-@media screen and (max-width: 1000px) {
-  .fixed_content{
-    position: relative;
-    width: 100%;
-  } 
-  
-  .scrolling_content{
-    width: 100%;
-  }
-
-  #page_header{
-    display: none;
-  }
-}
-
 #about_me {
     overflow-wrap: break-word;
     hyphens: manual;
@@ -123,8 +108,12 @@ body {
     margin-bottom: 15px;
 }
 
+.flex{
+    display:flex;
+}
+
 .highlighted_project_text{
-    width:40%;
+    width:45%;
     padding: 15px;
     padding-top: 0px;
     margin-top: 0px;
@@ -135,8 +124,21 @@ body {
     background-color: #5a4cb8;
 }
 
-.flex{
-    display:flex;
+.highlighted_project_text_description{
+    width:45%; 
+    float: left
+}
+
+.highlighted_project_text_features{
+    text-align: left; 
+    float: left; 
+    width :45%; 
+    margin-right: 10px;
+}
+
+.highlighted_project_embed{
+    flex-grow:1; 
+    width:60%;
 }
 
 .project_block
@@ -167,7 +169,7 @@ body {
 }
 
 .expanded_project_text{
- width:40%;
+    width:40%;
     padding: 15px;
     padding-top: 0px;
     margin-right: 15px;
@@ -179,4 +181,48 @@ body {
 
 .expanded_project_embeds{
     width: 60%;
+}
+
+@media screen and (max-width: 1000px) {
+  .fixed_content{
+    position: relative;
+    width: 100%;
+  } 
+  
+  .scrolling_content{
+    width: 100%;
+  }
+
+  #page_header{
+    display: none;
+  }
+
+  .flex{
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .highlighted_project_text{
+    width:100%;
+    padding: 15px;
+    padding-top: 0px;
+    margin-top: 0px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+
+  .highlighted_project_embed {
+    width: 100%;
+  }
+
+  .highlighted_project_text_description{
+  float: none;
+  width: 100%;
+  }
+  
+  .highlighted_project_text_features{
+  float: none;
+  width: 100%;
+  }
+
 }
